# ping_pong_test

./: CMakeLists.txt  Makefile  cfg.json
include/: game.hpp  glob_var.hpp  player.hpp
src/: game.cpp  glob_var.cpp  main.cpp  player.cpp
